Add loop functions to make a square grid of divs
- clear previous grid before generating new grid
- write loop functions to initialise a grid of divs with unique id's

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
       <button id="num_of_squares_btn">Set Grid Size</button>
     </div>
     
-    <div id="grid_container">
-
+    <div>
+      <div class="flex_container">
+        <div id="grid_container"></div>
+      </div>
+      
     </div>
   </div>
 
